# reader-agent

./: .env  Dockerfile  Dockerfile.celery  README.md  agent_session.db  doc_chunk.db  pyproject.toml
.cursor/rules/: agent-development.mdc  development-workflow.mdc  fastapi-conventions.mdc  project-structure.mdc  python-coding-standards.mdc  testing-guidelines.mdc
src/: __init__.py  database.sql
src/agent/: agent.py  config.py  prompt.py  tools.py
src/agent/sub_agents/advanced_translate_agent/: agent.py  config.py  models.py  prompt.py  tools.py
src/agent/sub_agents/anki_agent/: agent.py  config.py  prompt.py
src/agent/sub_agents/conversation_topic_agent/: agent.py  config.py  prompt.py
src/agent/sub_agents/explain_agent/: __init__.py  agent.py  config.py  prompt.py
src/agent/sub_agents/mindmap_agent/: agent.py  config.py  prompt.py
src/agent/sub_agents/question_agent/: agent.py  config.py  prompt.py
src/agent/sub_agents/summary_agent/: agent.py  config.py  prompt.py
src/agent/sub_agents/translate_agent/: agent.py  config.py  prompt.py
src/app/: config.py  server.py
src/app/api/: middleware.py
src/app/api/routers/: __init__.py  chat.py  document.py  sse.py  task.py
src/app/api/schemas/: __init__.py  chat.py  task.py
src/app/db/: __init__.py  models.py  session.py
src/app/service/: document_service.py  minio_service.py  processing_service.py  sse.py  task_service.py
src/app/tasks/: executor.py  progress.py  worker.py
src/app/utils/: __init__.py  chunker.py  embedding.py  pdf_extractor.py
